--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,17 @@ dependencies {
 
     implementation "com.google.android.material:material:1.0.0"
 
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    implementation 'com.google.firebase:firebase-core:17.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':home')
     implementation project(path: ':supplier')
+    implementation project(path: ':core')
+    implementation project(path: ':checkout')
+    implementation project(path: ':configuration')
 }
+
+apply plugin: 'com.google.gms.google-services'
