--- a/home/build.gradle
+++ b/home/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(path: ':core')
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
 }
