--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation "com.google.android.material:material:1.0.0"
-
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
 
     implementation 'com.google.firebase:firebase-core:17.2.1'
@@ -43,6 +43,7 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':checkout')
     implementation project(path: ':configuration')
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
