--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 
     implementation dependencies.lifecycle
 
+    //Navigation
+    implementation dependencies.navigationFragment
+    implementation dependencies.navigationUi
+
     implementation 'com.google.firebase:firebase-core:17.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -48,6 +52,9 @@ dependencies {
     implementation project(path: ':domain')
 
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+
+    api dependencies.coroutinesCore
+    api dependencies.coroutinesAndroid
 }
 
 apply plugin: 'com.google.gms.google-services'
