--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,17 @@ dependencies {
     implementation dependencies.navigationFragment
     implementation dependencies.navigationUi
 
+    implementation dependencies.viewModel
+
+    implementation dependencies.koin
+    implementation dependencies.koinViewModel
+
     implementation 'com.google.firebase:firebase-core:17.2.1'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':domain')
+    implementation project(path: ':data')
 
     implementation 'com.google.firebase:firebase-auth:19.2.0'
 
