--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,7 +5,7 @@ ext {
 
     buildTools = '29.0.2'
     appCompactVersion = '1.1.0'
-    kotlinVersion = '1.3.50'
+    kotlinVersion = '1.3.61'
 
     AndroidArchVersion = '1.1.1'
     databindingVersion = '3.1.4'
@@ -25,7 +25,7 @@ ext {
     recyclerViewVersion = '1.0.0'
 
     //Navigation
-    navigationVersion = '2.2.0-rc01'
+    navigationVersion = '2.2.0-rc04'
 
     //Koin
     koinVersion = '2.0.1'
@@ -58,6 +58,8 @@ ext {
 
             material:   "com.google.android.material:material:$materialVersion",
             recyclerview: "androidx.recyclerview:recyclerview:$recyclerViewVersion",
+            viewModel:
+                    "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifeCycleVersion",
             lifecycle: "androidx.lifecycle:lifecycle-extensions:$lifeCycleVersion",
 
             //Navigation
