--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     api dependencies.coroutinesCore
     api dependencies.coroutinesAndroid
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
