--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.MainActivity"></activity>
-        <!--<activity android:name=".view.signup.SignupActivity" />
-        <activity android:name=".login.LoginActivity" />-->
+        <activity android:name=".view.signup.SignupActivity" />
+        <activity android:name=".view.login.LoginActivity" />
         <activity android:name=".view.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
