--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
+
+apply plugin: 'com.google.firebase.crashlytics'
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
 
@@ -38,7 +40,6 @@ dependencies {
 
     implementation "com.google.android.material:material:1.0.0"
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
 
     implementation dependencies.lifecycle
 
@@ -51,6 +52,9 @@ dependencies {
     implementation dependencies.koin
     implementation dependencies.koinViewModel
 
+    implementation dependencies.analytics
+    implementation dependencies.crashlytics
+
     implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
@@ -61,7 +65,6 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
 
     api dependencies.coroutinesCore
     api dependencies.coroutinesAndroid
